[gd_scene load_steps=55 format=3 uid="uid://dspw0lxyvi2jg"]

[ext_resource type="Script" path="res://scripts/menu/joinlobby.gd" id="1_1hrxf"]
[ext_resource type="FontFile" uid="uid://udg2ybjav8xi" path="res://text/Poorjaredfont-Regular.ttf" id="2_ck7vx"]
[ext_resource type="Texture2D" uid="uid://bn1mwt0ib5gjx" path="res://sprites/TitleGerman.png" id="2_ihk71"]
[ext_resource type="Texture2D" uid="uid://c0ksrq317ae1j" path="res://sprites/Background.png" id="2_nevoa"]
[ext_resource type="Texture2D" uid="uid://c3phrr16okv1m" path="res://sprites/TitleEnglish.png" id="3_fyfim"]
[ext_resource type="Texture2D" uid="uid://b6akhjr487n4a" path="res://sprites/TitleFrench.png" id="4_0pkh2"]
[ext_resource type="Texture2D" uid="uid://c58pdhmgat67s" path="res://sprites/TitleJapanese.png" id="5_8an4q"]
[ext_resource type="PackedScene" uid="uid://dieqkr5b1pfc" path="res://scenes/menus/sounds_and_songs.tscn" id="6_0xs4l"]
[ext_resource type="Texture2D" uid="uid://dhfrbw7clr0fb" path="res://sprites/TitleEasterEgg.png" id="6_h1plx"]
[ext_resource type="Texture2D" uid="uid://blpm8f0aq0xei" path="res://sprites/TitlePortuguese.png" id="7_tn5t5"]
[ext_resource type="Texture2D" uid="uid://3otxfff4g1jp" path="res://sprites/TitleRomanian.png" id="8_qo77v"]
[ext_resource type="Texture2D" uid="uid://b3f5ovr7fb8up" path="res://sprites/TitleSerbian.png" id="9_opxdi"]
[ext_resource type="PackedScene" uid="uid://cddoxkpcbhhcp" path="res://scenes/menus/optionsmenu.tscn" id="11_pyi7l"]
[ext_resource type="Script" path="res://scripts/menu/discord.gd" id="15_m7tcb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0w10q"]
atlas = ExtResource("2_ihk71")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuwfk"]
atlas = ExtResource("2_ihk71")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu2sv"]
atlas = ExtResource("2_ihk71")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_323dt"]
atlas = ExtResource("2_ihk71")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_awx54"]
atlas = ExtResource("2_ihk71")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei5qv"]
atlas = ExtResource("3_fyfim")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ts3"]
atlas = ExtResource("3_fyfim")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ifg"]
atlas = ExtResource("3_fyfim")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8fr"]
atlas = ExtResource("3_fyfim")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dml"]
atlas = ExtResource("3_fyfim")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcvkf"]
atlas = ExtResource("3_fyfim")
region = Rect2(0, 392, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_jasnt"]
atlas = ExtResource("3_fyfim")
region = Rect2(1920, 392, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhdsn"]
atlas = ExtResource("4_0pkh2")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_23eex"]
atlas = ExtResource("4_0pkh2")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_od2el"]
atlas = ExtResource("4_0pkh2")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8022"]
atlas = ExtResource("4_0pkh2")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_weqvj"]
atlas = ExtResource("4_0pkh2")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vd6e"]
atlas = ExtResource("5_8an4q")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_popup"]
atlas = ExtResource("5_8an4q")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_847tx"]
atlas = ExtResource("5_8an4q")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fawv"]
atlas = ExtResource("5_8an4q")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_hssfd"]
atlas = ExtResource("5_8an4q")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ejyy"]
atlas = ExtResource("6_h1plx")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs25g"]
atlas = ExtResource("7_tn5t5")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3u3v"]
atlas = ExtResource("7_tn5t5")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cv7r"]
atlas = ExtResource("7_tn5t5")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_hobtu"]
atlas = ExtResource("7_tn5t5")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q8ha"]
atlas = ExtResource("7_tn5t5")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4jf6"]
atlas = ExtResource("8_qo77v")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3nj3"]
atlas = ExtResource("8_qo77v")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_a82wa"]
atlas = ExtResource("8_qo77v")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_02weu"]
atlas = ExtResource("8_qo77v")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yi5s"]
atlas = ExtResource("8_qo77v")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_6phcq"]
atlas = ExtResource("9_opxdi")
region = Rect2(0, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2n1h"]
atlas = ExtResource("9_opxdi")
region = Rect2(1920, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_51gx1"]
atlas = ExtResource("9_opxdi")
region = Rect2(3840, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fr8j"]
atlas = ExtResource("9_opxdi")
region = Rect2(5760, 0, 1920, 392)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0wte"]
atlas = ExtResource("9_opxdi")
region = Rect2(7680, 0, 1920, 392)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca776"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w10q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuwfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu2sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_323dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awx54")
}],
"loop": true,
"name": &"de",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei5qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ts3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ifg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1dml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcvkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jasnt")
}],
"loop": true,
"name": &"en",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhdsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23eex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od2el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8022")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weqvj")
}],
"loop": true,
"name": &"fr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vd6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_popup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_847tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fawv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hssfd")
}],
"loop": true,
"name": &"ja",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ejyy")
}],
"loop": true,
"name": &"pr",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs25g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3u3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cv7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hobtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q8ha")
}],
"loop": true,
"name": &"pt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4jf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3nj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a82wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02weu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yi5s")
}],
"loop": true,
"name": &"ro",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6phcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2n1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51gx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fr8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0wte")
}],
"loop": true,
"name": &"sr",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_sj0ff"]
font = ExtResource("2_ck7vx")
font_size = 141
font_color = Color(0, 0, 0, 1)

[node name="JoinLobby" type="Node" node_paths=PackedStringArray("DISCORD")]
script = ExtResource("1_1hrxf")
DISCORD = NodePath("Discord")

[node name="JoinMenu" type="CanvasLayer" parent="."]
visible = false

[node name="JoinMenu" type="PanelContainer" parent="JoinMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -97.0
offset_right = 119.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="JoinMenu/JoinMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="JoinMenu/JoinMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="JoinMenu/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "multiplayer.lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddressEntry" type="LineEdit" parent="JoinMenu/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "multiplayer.address"
alignment = 1

[node name="JoinButton" type="Button" parent="JoinMenu/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "multiplayer.join"

[node name="HostButton" type="Button" parent="JoinMenu/JoinMenu/MarginContainer/VBoxContainer"]
self_modulate = Color(0, 1, 0.983333, 1)
layout_mode = 2
text = "multiplayer.host"

[node name="BackButton" type="Button" parent="JoinMenu/JoinMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back"
flat = true

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="TitleAnimation" type="AnimatedSprite2D" parent="MainMenu"]
position = Vector2(477.102, 133.5)
scale = Vector2(0.456633, 0.456633)
sprite_frames = SubResource("SpriteFrames_ca776")
animation = &"en"
speed_scale = 2.0

[node name="TitleScreen" type="Label" parent="MainMenu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.5
offset_top = -199.0
offset_right = 282.5
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(156, 71)
text = "Poor Jared..."
label_settings = SubResource("LabelSettings_sj0ff")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="PanelContainer" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -25.0
offset_right = 119.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SingleButton" type="Button" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "singleplayer"

[node name="MultiButton" type="Button" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "multiplayer"

[node name="OptionsButton" type="Button" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "options"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="CreditsButton" type="Button" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 0, 1)
layout_mode = 2
text = "credits"

[node name="LeaveButton" type="Button" parent="MainMenu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "exit.game"

[node name="Options" parent="." instance=ExtResource("11_pyi7l")]

[node name="Exit" type="CanvasLayer" parent="."]
visible = false

[node name="MainMenu" type="PanelContainer" parent="Exit"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -25.0
offset_right = 157.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Exit/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Exit/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Exit/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "exit.game.ask"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Exit/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="YesButton" type="Button" parent="Exit/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "yes"

[node name="NoButton" type="Button" parent="Exit/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "no"

[node name="BGImage" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(480.164, 269.78)
scale = Vector2(0.500407, 0.500407)
texture = ExtResource("2_nevoa")

[node name="Sounds and Songs" parent="." instance=ExtResource("6_0xs4l")]

[node name="Discord" type="Node" parent="."]
script = ExtResource("15_m7tcb")

[connection signal="pressed" from="JoinMenu/JoinMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="JoinMenu/JoinMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinMenu/JoinMenu/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/MarginContainer/VBoxContainer/SingleButton" to="." method="_on_single_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/MarginContainer/VBoxContainer/MultiButton" to="." method="_on_multi_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="Exit/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Exit/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
